--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,11 @@ jobs:
       with:
         python-version: '3.10' 
 
-    - name: Deploy to PythonAnywhere
-      uses: davidwells/python-anywhere-deploy-action@v1
+    - name: Reload webapp
+      uses: jensvog/pythonanywhere-webapp-reload-action@v1
       with:
-        pythonAnywhereUsername: ${{ secrets.PYTHONANYWHERE_USERNAME }} 
-        pythonAnywherePassword: ${{ secrets.PYTHONANYWHERE_PASSWORD }}  
-        pythonAnywhereDomain: 'https://gondergelsin.pythonanywhere.com/' 
+          username: ${{ secrets.USERNAME }}
+          api-token: ${{ secrets.API_TOKEN }}
+          domain-name: 'https://gondergelsin.pythonanywhere.com/' 
+
+
