--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,11 @@ jobs:
       with:
         python-version: '3.10' 
 
-    - name: Reload webapp
+    - name: Reload pythonanywhere webapp
       uses: jensvog/pythonanywhere-webapp-reload-action@v1
       with:
           username: ${{ secrets.USERNAME }}
           api-token: ${{ secrets.API_TOKEN }}
           domain-name: 'https://gondergelsin.pythonanywhere.com/' 
-
+            
 
