--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Deploy
-      uses: umuttopalak/pythonanywhere-deploy-action@latest
+      uses: umuttopalak/pythonanywhere-deploy-action@v2
       with:
           HOST : ${{ secrets.HOST }}
           USERNAME : ${{ secrets.USERNAME }}
