--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,49 @@
 asgiref==3.8.0
+CacheControl==0.14.0
+cachetools==5.3.3
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==42.0.5
 Django==5.0.3
+django-firebase-auth==1.2.1
 djangorestframework==3.15.0
+drf-yasg==1.21.7
+google-api-core==2.18.0
+google-api-python-client==2.124.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.15.0
+google-cloud-storage==2.16.0
+google-crc32c==1.5.0
+google-resumable-media==2.7.0
+googleapis-common-protos==1.63.0
+grpcio==1.62.1
+grpcio-status==1.62.1
+httplib2==0.22.0
+idna==3.6
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+msgpack==1.0.8
+openapi-codec==1.3.2
+packaging==24.0
+proto-plus==1.23.0
+protobuf==4.25.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.21
+PyJWT==2.8.0
+pyparsing==3.1.2
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.31.0
+rsa==4.9
+simplejson==3.19.2
 sqlparse==0.4.4
+uritemplate==4.1.1
+urllib3==2.2.1
