--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Re-Deploy
-      uses: umuttopalak/pythonanywhere-deploy-action@v1.1.1
+      uses: umuttopalak/pythonanywhere-deploy-action@master
       with:
           host : ${{ secrets.HOST }}
           username : ${{ secrets.USERNAME }}
