--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,12 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==42.0.5
 Django==5.0.3
+django-cors-headers==4.3.1
 django-firebase-auth==1.2.1
 djangorestframework==3.15.0
+djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
+firebase-admin==6.5.0
 google-api-core==2.18.0
 google-api-python-client==2.124.0
 google-auth==2.29.0
@@ -39,6 +42,7 @@ pyasn1_modules==0.4.0
 pycparser==2.21
 PyJWT==2.8.0
 pyparsing==3.1.2
+python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
