--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ openapi-codec==1.3.2
 packaging==24.0
 proto-plus==1.23.0
 protobuf==4.25.3
+psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.21
