--- a/template.env
+++ b/template.env
@@ -3,3 +3,8 @@ DB_USER =
 DB_PASSWORD = 
 DB_HOST = 
 DB_PORT = 
+EMAIL_HOST = "smtp.gmail.com"
+EMAIL_HOST_USER = "yourusername@gmail.com"
+EMAIL_HOST_PASSWORD = 'yourpassword'
+EMAIL_PORT = 587
+EMAIL_USE_TLS = True
