forget-password test

--- a/template.env
+++ b/template.env
@@ -8,3 +8,7 @@ EMAIL_HOST_USER = "yourusername@gmail.com"
 EMAIL_HOST_PASSWORD = 'yourpassword'
 EMAIL_PORT = 587
 EMAIL_USE_TLS = True
+
+GOOGLE_CLIENT_ID = 'your-client-id'
+GOOGLE_CLIENT_SECRET = 'your-client-secret'
+GOOGLE_REFRESH_TOKEN = 'your-refresh-token'
