--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,128 @@
-asgiref==3.8.0
-CacheControl==0.14.0
+annotated-types==0.6.0
+anyio==4.0.0
+asgiref==3.7.2
+async-timeout==4.0.3
+attrs==23.1.0
+autopep8==2.0.2
+boto3==1.28.73
+botocore==1.31.73
 cachetools==5.3.3
-certifi==2024.2.2
+certifi==2023.5.7
 cffi==1.16.0
-charset-normalizer==3.3.2
+channels==4.0.0
+channels-redis==4.1.0
+charset-normalizer==3.2.0
+click==8.1.7
 coreapi==2.3.3
 coreschema==0.0.4
-cryptography==42.0.5
-Django==5.0.3
-django-cors-headers==4.3.1
-django-firebase-auth==1.2.1
-djangorestframework==3.15.0
-djangorestframework-simplejwt==5.3.1
-drf-yasg==1.21.7
-firebase-admin==6.5.0
-google-api-core==2.18.0
-google-api-python-client==2.124.0
+coverage==7.4.0
+cryptography==41.0.7
+defusedxml==0.8.0rc2
+dj-database-url==2.0.0
+Django==4.2.7
+django-cognito-jwt==0.0.4
+django-cors-headers==4.2.0
+django-redis==5.4.0
+django-rest-swagger==2.2.0
+django-storages==1.13.2
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+dnspython==2.6.1
+drf-yasg==1.21.5
+email_validator==2.1.1
+et-xmlfile==1.1.0
+Faker==18.9.0
+fastapi==0.111.0
+fastapi-cli==0.0.2
+geographiclib==2.0
+geojson==3.0.1
+geopy==2.4.1
+gevent==23.9.1
 google-auth==2.29.0
 google-auth-httplib2==0.2.0
-google-cloud-core==2.4.1
-google-cloud-firestore==2.15.0
-google-cloud-storage==2.16.0
-google-crc32c==1.5.0
-google-resumable-media==2.7.0
-googleapis-common-protos==1.63.0
-grpcio==1.62.1
-grpcio-status==1.62.1
+google-auth-oauthlib==1.2.0
+greenlet==3.0.1
+gunicorn==20.1.0
+h11==0.14.0
+httpcore==1.0.5
 httplib2==0.22.0
-idna==3.6
+httptools==0.6.1
+httpx==0.27.0
+hyperlink==21.0.0
+idna==3.4
+importlib-metadata==7.0.1
 inflection==0.5.1
+iniconfig==2.0.0
 itypes==1.2.0
-Jinja2==3.1.3
-MarkupSafe==2.1.5
-msgpack==1.0.8
+Jinja2==3.1.2
+jmespath==1.0.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+mdurl==0.1.2
+model-bakery==1.11.0
+msgpack==1.0.7
+mysqlclient==2.2.4
+numpy==1.25.1
+oauthlib==3.2.2
 openapi-codec==1.3.2
-packaging==24.0
-proto-plus==1.23.0
-protobuf==4.25.3
-psycopg2-binary==2.9.9
+openpyxl==3.1.2
+orjson==3.10.3
+packaging==23.1
+pandas==2.0.3
+Pillow==9.5.0
+platformdirs==4.1.0
+pluggy==1.2.0
+psycopg2-binary==2.9.6
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
+pycodestyle==2.11.0
 pycparser==2.21
-PyJWT==2.8.0
+pydantic==1.10.7
+pydantic_core==2.18.2
+Pygments==2.17.2
+PyJWT==2.7.0
 pyparsing==3.1.2
-python-dotenv==1.0.1
-pytz==2024.1
+pytest==7.4.0
+pytest-cov==4.1.0
+pytest-django==4.5.2
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-multipart==0.0.9
+python3-openid==3.2.0
+pytz==2023.3
 PyYAML==6.0.1
+redis==5.0.1
 requests==2.31.0
+requests-oauthlib==2.0.0
+rich==13.7.1
 rsa==4.9
-simplejson==3.19.2
+ruamel.yaml==0.17.32
+ruamel.yaml.clib==0.2.8
+s3transfer==0.7.0
+shellingham==1.5.4
+simplejson==3.19.1
+six==1.16.0
+sniffio==1.3.0
+social-auth-app-django==5.4.1
+social-auth-core==4.5.4
 sqlparse==0.4.4
+starlette==0.37.2
+str2bool==1.1
+tomli==2.0.1
+tqdm==4.65.0
+typer==0.12.3
+typing_extensions==4.7.1
+tzdata==2023.3
+ujson==5.9.0
 uritemplate==4.1.1
-urllib3==2.2.1
+urllib3==1.26.15
+uvicorn==0.23.2
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==12.0
+whitenoise==6.5.0
+XlsxWriter==3.1.2
+yapf==0.40.1
+zipp==3.17.0
+zope.event==5.0
+zope.interface==6.3
