Update docker-compose.yml to change Gunicorn application binding
- Modified the Gunicorn command in docker-compose.yml to bind to 'backend.wsgi:application' instead of 'myproject.wsgi:application'. This change aligns the service with the updated project structure.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,7 @@ services:
     command: >
       sh -c "
       python manage.py migrate && 
-      python manage.py collectstatic --noinput && 
-      gunicorn -b 0.0.0.0:8000 myproject.wsgi:application
+      gunicorn -b 0.0.0.0:8000 backend.wsgi:application
       "
     restart: always
 
